# jarvis

./: .gitignore  README.md  SECURITY.md  install.sh  uninstall.sh
.github/: dependabot.yml
.github/workflows/: release.yml
apps/_sdk/: dyld_report.py  harness.py  test_harness.py
apps/algo-core/: manifest.toml
apps/cidrtool/: main.py  manifest.toml  test_cidrtool.py
apps/classify/: main.py  manifest.toml  test_classify.py
apps/codeglass/: main.py  manifest.toml  test_codeglass.py
apps/colorlab/: main.py  manifest.toml  test_colorlab.py
apps/cronwise/: main.py  manifest.toml  test_cronwise.py
apps/csvlens/: main.py  manifest.toml  test_csvlens.py
apps/datalint/: main.py  manifest.toml  test_datalint.py
apps/diffscope/: main.py  manifest.toml  test_diffscope.py
apps/entropy/: main.py  manifest.toml  test_entropy.py
apps/example-plugin/: main.py  manifest.toml  test_example_plugin.py
apps/explain/: main.py  manifest.toml  test_explain.py
apps/extract/: main.py  manifest.toml  test_extract.py
apps/fab-link/: manifest.toml
apps/freqwave/: main.py  manifest.toml  test_freqwave.py
apps/global-scan/: README.md  main.py  manifest.toml  test_global_scan.py
apps/hashkit/: main.py  manifest.toml  test_hashkit.py
apps/jsonpath/: main.py  manifest.toml  test_jsonpath.py
apps/jwtpeek/: main.py  manifest.toml  test_jwtpeek.py
apps/keywords/: main.py  manifest.toml  test_keywords.py
apps/mark-forge/: Cargo.toml  SPEC.md  manifest.toml
apps/mark-forge/src/: body.rs  broadphase.rs  error.rs  ipc.rs  lib.rs  main.rs  math.rs  narrowphase.rs  world.rs
apps/markmap/: main.py  manifest.toml  test_markmap.py
apps/nexus/: SPEC.md  main.py  manifest.toml  signal_proof.py  test_main.py
apps/numbase/: main.py  manifest.toml  test_numbase.py
apps/ohmslaw/: main.py  manifest.toml  test_ohmslaw.py
apps/portref/: main.py  manifest.toml  test_portref.py
apps/regexpad/: main.py  manifest.toml  test_regexpad.py
apps/resistor/: main.py  manifest.toml  test_resistor.py
apps/rewrite/: main.py  manifest.toml  test_rewrite.py
apps/sentiment/: main.py  manifest.toml  test_sentiment.py
apps/silicon-canvas/: Cargo.toml  SPEC.md  manifest.toml
apps/silicon-canvas/src/: ipc.rs  lib.rs  main.rs  ops.rs  render.rs  sexpr.rs
apps/subnetcalc/: main.py  manifest.toml  test_subnetcalc.py
apps/summarize/: main.py  manifest.toml  test_summarize.py
apps/textkit/: main.py  manifest.toml  test_textkit.py
apps/timewarp/: main.py  manifest.toml  test_timewarp.py
apps/titlegen/: main.py  manifest.toml  test_titlegen.py
apps/unitwise/: main.py  manifest.toml  test_unitwise.py
apps/urlparse/: main.py  manifest.toml  test_urlparse.py
apps/vision/: Info.plist  Package.swift  manifest.toml
boot/: com.darwin.daemon.plist  com.darwin.hud.plist  com.darwin.inference.plist  com.jarvis.inference.plist  run_daemon.sh  run_hud.sh  run_inference.sh
config/: agents.toml  darwin.toml  jarvis.toml
daemon/: Cargo.toml  build.rs
daemon/csrc/: es_shim.c  thermal_shim.m
daemon/src/: actions.rs  agents.rs  anthropic.rs  anticipate.rs  apps.rs  artifact.rs  atlas.rs  attribution.rs  audio.rs  audit.rs  calibrate.rs  capability.rs  captions.rs  cartographer.rs  changeq.rs  code.rs  command.rs  config.rs  confirm.rs  connector.rs  consensus.rs  crypto.rs  diarize.rs  distill.rs  dls.rs  docsearch.rs  drafts.rs  durable_missions.rs  egress.rs  egress_beacon.rs  envlock.rs  episodic.rs  es.rs  eval.rs  explain.rs  exposure.rs  fetchproxy.rs  focus.rs  forge.rs  forge_gap.rs  (+69 more)
daemon/src/integrations/: github.rs  google_ads.rs  google_calendar.rs  google_drive.rs  google_gmail.rs  google_oauth.rs  hibp.rs  linkedin.rs  meta_ads.rs  mod.rs  oauth2.rs  plaid.rs  slack.rs  smarthome.rs  whoop.rs  x_social.rs
daemon/src/skills/: mathx.rs  mod.rs  utilities.rs
daemon/tests/: pdf_memory_jail.rs
docs/: ARCHITECTURE.md  BRINGUP.md  HUD.md  INTROSPECT.md  OS_CAPABILITIES.md  PLUGIN_SDK.md  RELEASE.md  ROADMAP.md  SANDBOX.md  SKILLS.md
hud/: README.md  index.html  package-lock.json  package.json
hud/src/: App.tsx  main.tsx  styles.css
hud/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
hud/src-tauri/src/: actuator.rs  command.rs  config_settings.rs  credentials.rs  heal.rs  lib.rs  main.rs  mic_stream.rs  permissions.rs  setup.rs  takeover.rs  tcc.rs  uninstall.rs  updates.rs
hud/src/components/: AboutPanel.tsx  ActionPanel.tsx  AgentPanel.tsx  AmbientMode.tsx  AnswerSourcesPanel.tsx  AppDeckPanel.tsx  AttributionHealthPanel.tsx  AudioIoPanel.tsx  AuditPanel.tsx  BootReveal.tsx  BriefFocusPanel.tsx  CapabilityAtlasPanel.tsx  CapabilityStatusPanel.tsx  CaptionBand.tsx  ChangeQueuePanel.tsx  CodeIntelPanel.tsx  CommandDeck.tsx  ConduitField.tsx  ConnectorMarketplacePanel.tsx  DistillPanel.tsx  DocSearchPanel.tsx  ErrorBoundary.tsx  FirstRunSetup.tsx  Frame.tsx  GlobalScanPanel.tsx  HandoffPanel.tsx  InferencePerfPanel.tsx  IntrospectPanel.tsx  JournalPanel.tsx  LifeLogPanel.tsx  McpPanel.tsx  (+34 more)
inference/: benchmark.py  coreml_embed.py  coreml_rerank.py  deploy_models.py  requirements.txt  server.py  test_audio_isolation.py  test_benchmark.py  test_coreml_embed.py  test_coreml_rerank.py  test_embed_pool.py  test_peer_cancel.py  test_pronunciation.py  test_sfx.py  test_voice_tier.py
inference/benchmarks/: baseline_m1_pro.json
inference/personas/: aegis.txt  athena.txt  babel.txt  cassandra.txt  darwin.txt  dume.txt  edith.txt  friday.txt  fury.txt  gecko.txt  herald.txt  hercules.txt  hulk.txt  jerome.txt  karen.txt  midas.txt  mnemosyne.txt  oracle.txt  pepper.txt  sage.txt  stark.txt  steve.txt  ultron.txt  veronica.txt  vision.txt  vitalis.txt  voyager.txt
inference/prompts/: intent_classifier.txt  persona.txt
scripts/: ane_probe.py  apply_code_diff.sh  apply_forge.sh  apply_heal.sh  apply_optimization.sh  bringup.sh  doctor.sh  greeting_probe.py  hud_demo_feed.py  init_memory.py  install_boot.sh  test_apply_code_diff_confinement.sh  test_apply_heal_confinement.sh  test_install_boot.sh  test_shell_sandbox.sh  ui.sh  uninstall_boot.sh
(+115 files in other folders)
