[package]
name = "jarvis-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jarvisd"
path = "src/main.rs"

[features]
# OFF by default — the normal build links no EndpointSecurity and adds no attack
# surface. Turning it on compiles the ES C shim (build.rs) + the daemon/src/es.rs
# NOTIFY client, which is DEVICE-GATED at runtime (needs root + the restricted
# com.apple.developer.endpoint-security.client entitlement + a notarized host).
# See docs/INTROSPECT.md.
endpoint-security = []

[build-dependencies]
# Compiles csrc/es_shim.c when the endpoint-security feature is on. Present as a
# plain build-dep (tiny, ubiquitous); build.rs only INVOKES it under the feature.
cc = "1"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
cpal = "0.15"
futures-util = "0.3"
# Capability-token HMAC-SHA256 (RustCrypto): hmac + sha2 mint/verify the
# per-app token, hex encodes it for the JSONL line and the launch env.
hex = "0.4"
hmac = "0.12"
hound = "3.5"
# DOCSEARCH extractors (born-digital PDF + Office). All pure-Rust, on-device, no
# network. Each is invoked behind a `catch_unwind` skip boundary in docsearch.rs so
# a malformed/encrypted/scanned file (or one a parser panics on) is SKIPPED with a
# logged reason, never indexed as empty/garbage and never crashing the indexer.
#   * pdf-extract: TEXT extraction for born-digital PDFs (wraps lopdf; decodes the
#     content streams to UTF-8). A scanned/image-only PDF yields no text -> honest skip.
#   * zip + quick-xml: Office .docx/.xlsx/.pptx are ZIP-of-XML; we unzip the relevant
#     parts in-memory and pull the text runs out of the XML. `zip` is taken WITHOUT
#     default features + only `deflate-flate2` (Office parts are DEFLATE-compressed),
#     reusing the flate2 backend and dropping the crypto/zstd/bzip2/time surface.
pdf-extract = "0.10"
quick-xml = "0.37"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
# 0.20 shares cpal 0.15 with the capture path (one CoreAudio backend, no
# duplicate cpal in the tree); only the wav decoder (hound) is needed.
rodio = { version = "0.20", default-features = false, features = ["wav"] }
# SQLCipher (transparent, whole-file AES-256 page encryption via PRAGMA key) for
# the at-rest encrypted-memory feature (#11). `bundled-sqlcipher` vendors a SQLite
# amalgamation built WITH SQLCipher's crypto provider — the documented dep
# exception for this feature (encryption needs a backend). It is a strict superset
# of `bundled`: when [security].encrypt_memory is OFF the stores open WITHOUT a
# PRAGMA key and behave byte-for-byte as a plain SQLite file (no behavior change).
# `bundled-sqlcipher-vendored-openssl` so the crypto provider builds from a vendored
# OpenSSL in this environment rather than needing a system OpenSSL.
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sysinfo = "0.32"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zip = { version = "4", default-features = false, features = ["deflate-flate2"] }
