[package]
name = "darwin-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "darwind"
path = "src/main.rs"

# The MEMORY-JAILED PDF text-extraction helper. A short-lived child darwind spawns
# per PDF: it arms RLIMIT_AS (address-space cap) BEFORE handing bytes to
# pdf-extract, reads the PDF on stdin, writes extracted text on stdout, and exits
# non-zero on any error/panic. A decompression bomb of ANY shape (single-Flate,
# filter-chain-armored, or a parse-time XRef/ObjStm structural bomb) makes an
# allocation in THIS child fail -> the child aborts -> the parent honest-skips,
# never OOMing darwind. Filter- and structure-agnostic: it closes the residuals
# the in-process guard in docsearch.rs cannot. See src/bin/pdfjail.rs.
[[bin]]
name = "pdfjail"
path = "src/bin/pdfjail.rs"

[features]
# OFF by default — the normal build links no EndpointSecurity and adds no attack
# surface. Turning it on compiles the ES C shim (build.rs) + the daemon/src/es.rs
# NOTIFY client, which is DEVICE-GATED at runtime (needs root + the restricted
# com.apple.developer.endpoint-security.client entitlement + a notarized host).
# See docs/INTROSPECT.md.
endpoint-security = []

[build-dependencies]
# Compiles csrc/es_shim.c when the endpoint-security feature is on. Present as a
# plain build-dep (tiny, ubiquitous); build.rs only INVOKES it under the feature.
cc = "1"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
cpal = "0.17"
# Direct handles on crates already in the tree (via zip + pdf-extract) — no new
# downloads, pinned to the existing lock versions. Used ONLY by docsearch's PDF
# decompression-bomb guard: `lopdf` parses the PDF STRUCTURE (correct /Length stream
# boundaries; it does NOT decompress on load), and `flate2` inflates each FlateDecode
# stream through a byte budget BEFORE pdf-extract (which decompresses with no ratio
# cap) ever runs.
flate2 = "1"
# 0.42 (not the newest 0.44) so the DIRECT lopdf and the one INSIDE pdf-extract
# 0.12 resolve to ONE crate version — the bomb guard must inspect the exact same
# parse the extractor will run.
lopdf = "0.42"
futures-util = "0.3"
# Capability-token HMAC-SHA256 (RustCrypto): hmac + sha2 mint/verify the
# per-app token, hex encodes it for the JSONL line and the launch env.
hex = "0.4"
hmac = "0.13"
# ring (already locked transitively via rustls) — ring::aead AES-256-GCM for
# F18 federated-sync sealed bundles. No new download; version pinned to the lock.
ring = "0.17"
hound = "3.5"
# ONLY for the pdfjail memory-jail helper (src/bin/pdfjail.rs): setrlimit(RLIMIT_AS)
# to cap the extraction child's address space, plus mach task_info to read the
# process's baseline virtual size (on macOS/Apple Silicon a process reserves a huge
# virtual address space at startup, so RLIMIT_AS must be set to <baseline>+budget,
# not an unsettable small absolute — verified on-device). Tiny, ubiquitous.
libc = "0.2"
# DOCSEARCH extractors (born-digital PDF + Office). All pure-Rust, on-device, no
# network. Each is invoked behind a `catch_unwind` skip boundary in docsearch.rs so
# a malformed/encrypted/scanned file (or one a parser panics on) is SKIPPED with a
# logged reason, never indexed as empty/garbage and never crashing the indexer.
#   * pdf-extract: TEXT extraction for born-digital PDFs (wraps lopdf; decodes the
#     content streams to UTF-8). A scanned/image-only PDF yields no text -> honest skip.
#   * zip + quick-xml: Office .docx/.xlsx/.pptx are ZIP-of-XML; we unzip the relevant
#     parts in-memory and pull the text runs out of the XML. `zip` is taken WITHOUT
#     default features + only `deflate-flate2` (Office parts are DEFLATE-compressed),
#     reusing the flate2 backend and dropping the crypto/zstd/bzip2/time surface.
pdf-extract = "0.12"
quick-xml = "0.41"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
# 0.22 shares cpal 0.17 with the capture path (one CoreAudio backend, no
# duplicate cpal in the tree). `playback` re-enables the cpal-backed
# OutputStream (0.21 gated it behind that feature); `wav` is the symphonia
# WAV decoder that replaced hound in 0.22.
rodio = { version = "0.22", default-features = false, features = ["wav", "playback"] }
# SQLCipher (transparent, whole-file AES-256 page encryption via PRAGMA key) for
# the at-rest encrypted-memory feature (#11). `bundled-sqlcipher` vendors a SQLite
# amalgamation built WITH SQLCipher's crypto provider — the documented dep
# exception for this feature (encryption needs a backend). It is a strict superset
# of `bundled`: when [security].encrypt_memory is OFF the stores open WITHOUT a
# PRAGMA key and behave byte-for-byte as a plain SQLite file (no behavior change).
# `bundled-sqlcipher-vendored-openssl` so the crypto provider builds from a vendored
# OpenSSL in this environment rather than needing a system OpenSSL.
rusqlite = { version = "0.40", features = ["bundled-sqlcipher-vendored-openssl"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
sysinfo = "0.32"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.30"
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zip = { version = "8", default-features = false, features = ["deflate-flate2"] }
