# Silicon Canvas — GPU schematic/PCB renderer micro-app for Project DARWIN.
#
# Standalone binary crate (NOT part of the daemon workspace). The manifest
# declares runtime = "binary", entry = "silicon-canvas"; darwind execs the
# prebuilt binary directly under sandbox-exec (apps.rs Runtime::Binary).
#
# DEPENDENCY POLICY (frozen): every dependency the whole app will ever need is
# declared HERE so no downstream module agent edits this file. The GPU stack is
# behind an OPTIONAL `gpu` feature so `cargo test` / `cargo build` work WITHOUT a
# Metal device (CI / this M1 dev box), and `cargo check --features gpu` compiles
# the wgpu renderer. The non-gpu core (parser, scene, graph, R-tree, ERC, IPC,
# trace) builds and tests headlessly.

[package]
name = "silicon-canvas"
version = "0.1.0"
edition = "2021"
description = "GPU-accelerated KiCad schematic/PCB renderer: net highlighting, interactive tracing, and ERC overlay as a fullscreen HUD surface."
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "silicon-canvas"
path = "src/main.rs"

[lib]
name = "silicon_canvas"
path = "src/lib.rs"

[dependencies]
# --- core (always compiled; no GPU) --------------------------------------
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
# R-tree spatial index: one tree per layer/class for hit-test + viewport cull
# (SPEC §1). Built once at import, immutable afterward.
rstar = "0.12"

# --- gpu renderer (optional; behind `gpu` feature) -----------------------
# wgpu drives Metal; bytemuck for POD vertex/instance/uniform casts; pollster
# to block on the async device request from sync setup; glam for the mat3/vec2
# view math (double precision view transform is computed in f64 and downcast
# per-frame); lyon to tessellate zone polygons once at import (SPEC §2).
wgpu = { version = "22", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
pollster = { version = "0.3", optional = true }
glam = { version = "0.29", optional = true }
lyon = { version = "1", optional = true }

[features]
# Default OFF so the headless core builds and tests on a GPU-less box. Turn on
# with `cargo check --features gpu` to compile the renderer.
default = []
gpu = ["dep:wgpu", "dep:bytemuck", "dep:pollster", "dep:glam", "dep:lyon"]

[dev-dependencies]
# (reserved for module-agent tests; kept minimal — std + the core deps above
# cover the headless test surface.)

[profile.release]
# Renderer wants tight, vectorized inner loops; import wants fast tessellation.
opt-level = 3
lto = "thin"
codegen-units = 1
