[package]
name = "jarvis-hud"
version = "0.1.0"
description = "JARVIS HUD — fullscreen telemetry face for jarvisd"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "jarvis_hud_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# WS4a auto-updater: checks the GitHub Releases latest.json endpoint (configured
# in tauri.conf.json -> plugins.updater) and verifies the bundle's minisign
# signature against the OWNER's PUBLIC updater key. The matching PRIVATE key
# (TAURI_SIGNING_PRIVATE_KEY) lives ONLY in CI secrets — it is NEVER in this repo.
# ARMED: tauri.conf.json carries the owner's REAL updater pubkey (the placeholder
# was swapped for v1.0.0), so the in-app check is live against the pinned GitHub
# Releases endpoint. updater_unarmed() in updates.rs stays as a defensive
# regression guard that short-circuits to a clean "not_configured" result if the
# committed key ever regresses to the placeholder/empty (see check_for_updates in
# updates.rs). Pinned to the 2.x line that matches
# tauri 2.11.x.
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "json"] }
# In-process Keychain (no key material on any subprocess argv).
security-framework = "3"
# Async fs + child-process for the gated self-heal apply command (heal.rs).
# Tauri already pulls tokio in transitively; we declare it to `use` it directly.
tokio = { version = "1", features = ["process", "fs", "io-util"] }
# IN-PROCESS microphone capture (mic_stream.rs). Capturing the mic in THIS app
# bundle (which carries NSMicrophoneUsageDescription + the audio-input
# entitlement) makes macOS show a clean "JARVIS" mic prompt; the raw f32 PCM is
# then streamed over a Unix socket to the daemon's app-audio ingest. Same 0.15
# line the daemon already depends on — no new crate version.
cpal = "0.15"
# Pin: time 0.3.48 adds impls that conflict (E0119) with blanket `From` impls
# in cookie 0.18.1 and tauri-utils 2.9.2. Drop this once those crates ship fixes.
time = "=0.3.47"

# macOS kiosk presentation-options for the DEVICE-GATED takeover (hide Dock /
# menu bar). These are NOT new heavy deps: tao (Tauri's windowing layer) already
# pulls objc2 / objc2-app-kit / objc2-foundation at these exact versions with the
# `NSApplication` feature, so Cargo's feature unification means we add no new
# crate to the graph — we only name them as direct deps so `takeover.rs` can call
# NSApplication::setPresentationOptions. Gated to macOS; on other targets the
# helper is a compile-time no-op and these deps are not pulled.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = ["std"] }
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "NSApplication", "NSResponder"] }
# SYSTEM ACCESS — fire the REAL macOS TCC prompts from THIS app bundle (tcc.rs) so
# the user sees a clean "JARVIS" dialog. block2 carries the AVFoundation
# requestAccess completion handler; core-foundation builds the
# AXIsProcessTrustedWithOptions options dict. Both are already in the lock
# (transitive), so naming them as direct deps adds no new crate to the graph.
block2 = "0.6"
core-foundation = "0.10"
# UI ACTUATOR (actuator.rs) — post the SINGLE CGEvent (click / type / key) for a
# token-authenticated daemon actuation request IN THIS app process, so macOS shows
# a clean "JARVIS would like to control this computer" Accessibility prompt
# (JARVIS.app, not the daemon). The HUD is the SERVER that holds the Accessibility
# grant + posts the event. Already in the lock (transitive via tao); naming it as
# a direct dep adds no new crate to the graph.
core-graphics = "0.25"

[dev-dependencies]
# Drives the async unit tests (verify dispatch short-circuit / id guard). The
# tests never touch the network; they exercise the pure dispatch shape.
tokio = { version = "1", features = ["macros", "rt"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
